Stop interactive title from running into sides of screen on mobile

--- a/wp-content/themes/csismag/assets/_scss/blocks/post/_interactive.scss
+++ b/wp-content/themes/csismag/assets/_scss/blocks/post/_interactive.scss
@@ -3,12 +3,15 @@
 .wp-block-lazyblock-post-interactive {
   .csis-block {
     &__title {
-      max-width: $size__content-max-width;
+      max-width: 100%;
       margin: 0 auto rem(12);
+      padding: 0 var(--container-padding);
       @extend %font-heading-md-sans;
+      text-align: center;
 
-      @include breakpoint('large') {
-        text-align: center;
+      @include breakpoint('medium') {
+        max-width: $size__content-max-width;
+        padding: 0;
       }
     }
   }
